# crm

./: architecture.md
aviation-workflow/: .dockerignore  .env.example  .gitignore  Dockerfile.api  Dockerfile.streamlit  README.md  config.yaml  docker-compose.yml  nginx.conf  pyproject.toml  requirements-dev.txt  requirements.txt  run_api.py  startup.md  test_api.py  test_approvals_module.py  test_comments_module.py  test_departments_module.py  test_templates_module.py  test_workflow.py  verify_implementation.py  verify_tests.py
aviation-workflow/api/: dependencies.py  main.py  middleware.py
aviation-workflow/core/: config.py  database.py  models.py  plugin_manager.py  workflow_engine.py
aviation-workflow/dashboard/: main.py
aviation-workflow/modules/approvals/: __init__.py  models.py  routes.py  schemas.py  service.py  validators.py
aviation-workflow/modules/comments/: __init__.py  models.py  routes.py  schemas.py  service.py
aviation-workflow/modules/departments/: __init__.py  models.py  routes.py  schemas.py  service.py
aviation-workflow/modules/templates/: __init__.py  models.py  routes.py  schemas.py  service.py
aviation-workflow/scripts/: init_db.py  load_test.py  run_dev.py  seed_data.py  test_complete_workflow.py  test_module_independence.py  validate_mvp.py  validate_mvp_simple.py
aviation-workflow/tests/: conftest.py
aviation-workflow/tests/test_core/: test_workflow_engine.py
aviation-workflow/tests/test_modules/: test_departments.py
aviation-workflow/ui/: app.py
aviation-workflow/workflows/: base_workflow.py  sequential_approval.py
(+9 files in other folders)
